# edu-pico-firmware

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yml
blink/: CMakeLists.txt  main.c
